--- a/ai_safety_blog/_config.yml
+++ b/ai_safety_blog/_config.yml
@@ -18,12 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: AI Safety Project (Bluedot)
+email: karolina.mlprojects@gmail.com
+description: >
+  I made this blog to post my homework for the AI Safety Course by Bluedot.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
