--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,7 @@ description: >
   Personal Blog to showcase my projects. Inspired to make it after taking the AI Safety Course by Bluedot.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  piernikowyludek
 
 # Build settings
 theme: minima
